@@ -9,6 +9,7 @@ VP 10.1.0 Changelog
   The ball size for this mode can also be defined in the debugger menu.
 - add an "Update All" button to the image manager for updating all images without any further inquiry. Only an error message is shown after updating if some 
   images can't be updated (e.g. files not found)
+- add a "Raise Delay" setting to drop targets. 
 
 - DirectX 8 port for input handling (currently disabled)
 - texture size limit/downscale now respects aspect ratio (currently disabled)
